package com.example.mathewcop3330assignment4part2;

import javafx.fxml.FXML;

public class Controller {


    @FXML
    public void handlecase(){
        System.out.println("Hello");
    }
}