package com.example.mathewcop3330assignment4part2;

public class InputFile {
    /*
    OutputFile outputFile
    //sets up possibility for save to same or other file
    public Scanner inputReader
    //lets input file be read
    private String fileName
    //holds name of input file

    InputFile(){
        fileName = default name
        setInputReader(fileName)
    }
    InputFile(String fileName){
        this class's fileName = fileName
        setInputReader(fileName)
    }
    private ifError(String fileName){
        print out failure to create input file scanner
    }
    private setInputReader(String fileName){
        scanner for file reading to fileName
        catch error
            ifError(String fileName)
    }
    String getFileName(){
        return fileName
    }
    createOutputFile(){
        create instance of OutputFile and set to outputFile
    }
    createOutputFile(String title){
        create instance of OutputFile with parameter and set to outputFile
    }
     */
}
