package com.example.mathewcop3330assignment4part2;

public class OutputFile {
    /*
        public FileWriter outWriter
        //writes to output file
        private String fileName
        //holds output file name
        OutputFile(){
            OutputFile(default name)
        }
        OutputFile(String fileName){
            create File object of fileName
            catch error
                ifError(fileName)
        }
        private ifError(String fileName){
            set fileName = "Error"
        }
        private setOutWriter(fileName){
            creates FileWriter object to fileName and sets it to outWriter
        }
        String getFileName(){
            return fileName
        }
     */
}
